<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/search"-->
        <!--android:actionViewClass="android.widget.SearchView"-->
        <!--android:icon="@android:drawable/ic_menu_search"-->
        <!--android:showAsAction="always"-->
        <!--android:title="" />-->


    <item android:id="@+id/contato"
        android:title="@string/menu_contato"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/compartilhar"
        android:title="@string/menu_compartilhar"
        android:orderInCategory="101"
        app:showAsAction="never"/>


    <item android:id="@+id/sobre"
        android:title="@string/menu_sobre"
        android:orderInCategory="102"
        app:showAsAction="never"/>

    <item android:id="@+id/sair"
        android:title="@string/menu_sair"
        android:orderInCategory="104"
        app:showAsAction="never"/>


</menu>