<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18dp"
            android:textColor="@color/cor_texto"
            android:textStyle="bold"
            android:padding="6dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="18dp"
            android:textColor="@color/cor_texto"
            android:padding="6dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/versaoApp"
            android:textSize="18dp"
            android:textColor="@color/cor_texto"
            android:padding="6dp"
            />

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/versaoBD"-->
        <!--android:textSize="18dp"-->
        <!--android:padding="6dp"-->
        <!--/>-->


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bt_ok"
        android:id="@+id/bt_ok"
        android:background="@color/cor6"
        android:textColor="@color/preto"/>




</LinearLayout>
