<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="6dp"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_contato"
            android:textSize="18dp"
            android:textColor="@color/cor_texto"
            android:padding="6dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="6dp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/cor_texto"
            android:paddingLeft="6dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myEmail"
            android:textSize="18dp"
            android:textColor="@color/cor_texto"
            android:paddingLeft="6dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="6dp"
            android:padding="6dp"/>


    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->
    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/telefone"-->
    <!--android:textSize="18dp"-->
    <!--android:paddingLeft="6dp"-->
    <!--android:textStyle="bold"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/myTelefone"-->
    <!--android:textSize="18dp"-->
    <!--android:paddingLeft="6dp"-->
    <!--/>-->


    <!--</LinearLayout>-->


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bt_ok"
        android:id="@+id/bt_ok"
        android:background="@color/cor6"
        android:textColor="@color/preto"
        />




</LinearLayout>
